--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "yaml": "^1.10.2"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "tailwindcss": "^2.2.4"
