--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Fetch and Extract Proxies
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '0 4 * * *'  
+    - cron: '0 4 * * *'
+  
 
 jobs:
   fetch-text:
