--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
