--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
             npm cache clean --force
             rm -rf node_modules
-            rm package-lock.json
+            rm -f package-lock.json
 
     - name: Install dependencies
       run: npm install
