--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
             git add proxies.yaml
             git commit -m "Update extracted content [skip ci]"
             git pull origin main
-            git push origin main
+            git push -u origin main
