--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
             rm -f package-lock.json
 
     - name: Install dependencies
-      run: npm install
+      run: |
+           npm install js-yaml@latest
+           npm install
 
     - name: Run script
       run: node .github/scripts/fetchAndExtract.js
