Update extracted content [skip ci]

--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,36 +1,1 @@
-proxies:
-  - name: 🇺🇦_UA_乌克兰->🇹🇷_TR_土耳其
-    type: vmess
-    server: 185.158.211.186
-    port: 80
-    cipher: auto
-    uuid: b82493e3-07b4-4cf2-b585-965575cfeb32
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: softiri.serveirc.com
-  - name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10837
-    udp: true
-    password: 66c899df-785c-4290-9c10-74a62b3ddd2b
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
+proxies: [{name: 🇺🇦_UA_乌克兰->🇹🇷_TR_土耳其, type: vmess, server: 185.158.211.186, port: 80, cipher: auto, uuid: b82493e3-07b4-4cf2-b585-965575cfeb32, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /@forwardv2ray, headers: {host: softiri.serveirc.com}}}, {name: 🇬🇧_GB_英国, type: vmess, server: 172.99.190.109, port: 443, cipher: auto, uuid: 03fcc618-b93d-6796-6aed-8a38c975d581, alterId: 0, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: linkvws}}, {name: 🇨🇳_CN_中国->🇺🇸_US_美国, type: trojan, server: xibaozi.19890604.day, port: 10837, udp: true, password: 66c899df-785c-4290-9c10-74a62b3ddd2b, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}]
