--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
            npm install js-yaml@latest
+           npm view js-yaml versions
            npm install
 
     - name: Run script
