--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,4 +1,3 @@
 proxies:
-  - {name: 🇺🇦_UA_乌克兰->🇹🇷_TR_土耳其, type: vmess, server: 185.158.211.186, port: 80, cipher: auto, uuid: b82493e3-07b4-4cf2-b585-965575cfeb32, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /@forwardv2ray, headers: {host: softiri.serveirc.com}}}
-  - {name: 🇬🇧_GB_英国, type: vmess, server: 172.99.190.109, port: 443, cipher: auto, uuid: 03fcc618-b93d-6796-6aed-8a38c975d581, alterId: 0, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: linkvws}}
-  - {name: 🇨🇳_CN_中国->🇺🇸_US_美国, type: trojan, server: xibaozi.19890604.day, port: 10837, udp: true, password: 66c899df-785c-4290-9c10-74a62b3ddd2b, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}
+  - {name: 🇺🇸_US_美国->🇬🇧_GB_英国, type: vmess, server: 08dfde51-8c5d-4160-8732-0745507cfd5b.cloudflare-gateway.com, port: 443, cipher: auto, uuid: 76221bfb-e92f-4e80-81c5-6fe48f50ac0b, alterId: 0, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /glweidf.sbs/linkws, headers: {host: mikasa.erenyeager.cloudns.biz}}}
+  - {name: 🇬🇮_GI_直布罗陀, type: vmess, server: 95.164.69.27, port: 80, cipher: auto, uuid: cd4a6d0d-4b26-4ee1-8a42-c2878b5c3b2a, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /vmess, headers: {host: internet.life.com.by}}}
