--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,2 +1,5 @@
 proxies:
-  - {name: _null_null->🇺🇸_US_美国, type: vmess, server: 19.namesilo123.top, port: 8880, cipher: auto, uuid: 309f84b9-49dd-408d-a0b6-8860393be802, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /?ed=2048, headers: {host: freesg.sanfen002.top}}}
+  - {name: 🇩🇪_DE_德国, type: trojan, server: 3.73.245.33, port: 22222, udp: true, password: telegram-id-privatevpns, sni: trojan.miwan.co.uk, skip-cert-verify: true, network: tcp}
+  - {name: 🇨🇳_CN_中国->🇺🇸_US_美国_1, type: vmess, server: 03.kccic2pa.xyz, port: 50003, cipher: auto, uuid: 3c1de58d-0dac-4000-9cc3-4330e1e73578, alterId: 0, tls: false, skip-cert-verify: true, network: tcp}
+  - {name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利, type: trojan, server: xibaozi.19890604.day, port: 10848, udp: true, password: da3f89e3-5676-4ca9-8f06-d51cb1ffbe96, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}
+  - {name: 🇨🇳_CN_中国->🇺🇸_US_美国_2, type: trojan, server: xibaozi.19890604.day, port: 10837, udp: true, password: ae119626-122e-4aee-bbcf-c3d7b6b4c3de, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}
