--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,5 +1,6 @@
 proxies:
-  - {name: 🇩🇪_DE_德国, type: trojan, server: 3.73.245.33, port: 22222, udp: true, password: telegram-id-privatevpns, sni: trojan.miwan.co.uk, skip-cert-verify: true, network: tcp}
-  - {name: 🇨🇳_CN_中国->🇺🇸_US_美国_1, type: vmess, server: 03.kccic2pa.xyz, port: 50003, cipher: auto, uuid: 3c1de58d-0dac-4000-9cc3-4330e1e73578, alterId: 0, tls: false, skip-cert-verify: true, network: tcp}
-  - {name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利, type: trojan, server: xibaozi.19890604.day, port: 10848, udp: true, password: da3f89e3-5676-4ca9-8f06-d51cb1ffbe96, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}
-  - {name: 🇨🇳_CN_中国->🇺🇸_US_美国_2, type: trojan, server: xibaozi.19890604.day, port: 10837, udp: true, password: ae119626-122e-4aee-bbcf-c3d7b6b4c3de, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1, type: trojan, server: 167.68.11.221, port: 443, udp: true, password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9, sni: k6us3.djjc.sbs, skip-cert-verify: true, network: ws, ws-opts: {path: /djjc/us3, headers: {host: k6us3.djjc.sbs}}}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2, type: trojan, server: 209.46.30.206, port: 443, udp: true, password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9, sni: k9us1.djjc.sbs, skip-cert-verify: true, network: ws, ws-opts: {path: /djjc/us1, headers: {host: k9us1.djjc.sbs}}}
+  - {name: 🇺🇸_US_美国->🇩🇪_DE_德国, type: trojan, server: 209.46.30.106, port: 443, udp: true, password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9, sni: nl4.djjc.sbs, skip-cert-verify: true, network: ws, ws-opts: {path: /djjc/nl1, headers: {host: nl4.djjc.sbs}}}
+  - {name: 🇩🇪_DE_德国->🇫🇷_FR_法国, type: vmess, server: yx.zhke.cf, port: 443, cipher: auto, uuid: 3b89f882-0c3f-4144-811d-91fce7ab3c05, alterId: 0, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /D26xvdqUdCpvvPTz4R, headers: {host: h196-fr.kxnn.eu.org}}}
+  - {name: 🇨🇳_CN_中国->🇺🇸_US_美国, type: trojan, server: xibaozi.19890604.day, port: 10838, udp: true, password: 8c20a85b-f70f-48aa-a607-92d57eddc92f, sni: cloudflare.node-ssl.cdn-alibaba.com, skip-cert-verify: true, network: tcp}
