--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,3 +1,7 @@
 proxies:
-  - {name: 🇨🇦_CA_加拿大->🇺🇸_US_美国, type: trojan, server: 23.227.38.11, port: 443, udp: true, password: b17fa17d-13a0-4e8a-a398-8e549ea8b208, sni: syndication-statutes-wanted-logo.trycloudflare.com, skip-cert-verify: true, network: ws, ws-opts: {path: /argox-tr}}
-  - {name: 🇦🇪_AE_阿联酋->🇫🇷_FR_法国, type: vmess, server: 94.140.0.110, port: 8880, cipher: auto, uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {host: food.zhaal.ir}}}
+  - {name: 🇺🇸_US_美国_1, type: vmess, server: 104.21.54.252, port: 8080, cipher: auto, uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {host: www.velvetmountain.shop}}}
+  - {name: 🇺🇸_US_美国_2, type: vmess, server: www.velvetmountain.shop, port: 8080, cipher: auto, uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {host: www.velvetmountain.shop}}}
+  - {name: 🇺🇸_US_美国_3, type: vmess, server: cloudflare.cfgo.cc, port: 80, cipher: auto, uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {host: wap.hostmjj.com}}}
+  - {name: 🇨🇦_CA_加拿大, type: trojan, server: 15.157.113.141, port: 22222, udp: true, password: telegram-id-directvpn, sni: trojan.miwan.co.uk, skip-cert-verify: false, network: tcp}
+  - {name: 🇺🇸_US_美国_4, type: vmess, server: 172.67.143.192, port: 8080, cipher: auto, uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {host: www.velvetmountain.shop}}}
+  - {name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国, type: vmess, server: 94.140.0.110, port: 8880, cipher: auto, uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334, alterId: 0, tls: false, skip-cert-verify: true, network: ws, ws-opts: {path: /, headers: {host: food.zhaal.ir}}}
