--- a/proxies.yaml
+++ b/proxies.yaml
@@ -1,5 +1,9 @@
 proxies:
-  - {name: 🇺🇸_US_美国, type: vmess, server: 162.159.136.106, port: 80, cipher: auto, uuid: 5820093a-bb7d-4e15-8575-1a529f2d8282, alterId: 0, network: ws}
-  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1, type: vmess, server: 172.64.167.35, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: ip2.1457230.xyz, network: ws}
-  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2, type: vmess, server: 104.19.38.88, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
-  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3, type: vmess, server: 104.17.106.171, port: 2052, cipher: auto, uuid: d6b6d982-d52f-465a-b988-85670b23f64a, alterId: 0, sni: cdn3.freegradely.xyz, network: ws}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1, type: vmess, server: 104.19.32.216, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国, type: vmess, server: 172.64.167.8, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2, type: vmess, server: 104.19.59.89, port: 2052, cipher: auto, uuid: d6b6d982-d52f-465a-b988-85670b23f64a, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3, type: vmess, server: ip.sb, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4, type: vmess, server: 172.64.175.88, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5, type: vmess, server: 172.64.166.32, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国->🇫🇷_FR_法国, type: vmess, server: 104.21.8.157, port: 2082, cipher: auto, uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a, alterId: 0, sni: '', network: ws}
+  - {name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_6, type: vmess, server: 104.19.38.8, port: 2086, cipher: auto, uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339, alterId: 0, sni: '', network: ws}
